--- a/Lectures/02 - Introduction to Mobile Application Development/index.html
+++ b/Lectures/02 - Introduction to Mobile Application Development/index.html
@@ -13,20 +13,20 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="stylesheet" href="../reveal/css/reveal.min.css">
-    <link rel="stylesheet" href="../reveal/css/theme/night.css" id="theme">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../static/reveal/css/reveal.min.css">
+    <link rel="stylesheet" href="../static/reveal/css/theme/night.css" id="theme">
+    <link rel="stylesheet" href="../static/css/style.css">
 
     <!-- For syntax highlighting -->
-    <link rel="stylesheet" href="../reveal/lib/css/zenburn.css">
+    <link rel="stylesheet" href="../static/reveal/lib/css/zenburn.css">
 
     <!-- If the query includes 'print-pdf', use the PDF print sheet -->
     <script>
-        document.write('<link rel="stylesheet" href="../reveal/css/print/' + ( window.location.search.match(/print-pdf/gi) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">');
+        document.write('<link rel="stylesheet" href="../static/reveal/css/print/' + ( window.location.search.match(/print-pdf/gi) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">');
     </script>
 
     <!--[if lt IE 9]>
-    <script src="../reveal/lib/js/html5shiv.js"></script>
+    <script src="../static/reveal/lib/js/html5shiv.js"></script>
     <![endif]-->
 </head>
 <body>
@@ -562,8 +562,8 @@
 </div>
 </div>
 
-<script src="../reveal/lib/js/head.min.js"></script>
-<script src="../reveal/js/reveal.min.js"></script>
+<script src="../static/reveal/lib/js/head.min.js"></script>
+<script src="../static/reveal/js/reveal.min.js"></script>
 
 <script>
     Reveal.initialize({
