building blocks part is added.

--- a/Lectures/03 - Application Fundamentals/index.html
+++ b/Lectures/03 - Application Fundamentals/index.html
@@ -134,6 +134,11 @@
     </section>
 
     <section>
+        <h2>Java to APK</h2>
+        <img src="img/apk.png"/>
+    </section>
+
+    <section>
         <h2>Zygote VM</h2>
         <img src="img/zvm.png"/>
     </section>
@@ -235,29 +240,67 @@
 
     <section>
         <h1>Android Manifest</h1>
+        <ul>
+            <li class="fragment roll-in">Application Name</li>
+            <li class="fragment roll-in">Components</li>
+            <li class="fragment roll-in">Required permissions</li>
+            <li class="fragment roll-in">Application features</li>
+            <li class="fragment roll-in">Minimum API level</li>
+            <li class="fragment roll-in">Other</li>
+        </ul>
+    </section>
+
+    <section>
+        <h1>Debugging</h1>
     </section>
 </section>
 
-
 <section>
+    <section>
+        <h2>Building an Application</h2>
+        <img src="img/ba.png"/>
+    </section>
+
     <section>
         <h1>Building Blocks</h1>
     </section>
 
     <section>
         <h1>Activity</h1>
+        <ul>
+            <li class="fragment roll-in">Primary class for interacting with user</li>
+            <li class="fragment roll-in">Usually implements a focused task</li>
+            <li class="fragment roll-in">Usually Involves one screenful of data</li>
+            <li class="fragment roll-in">Example: Calculator</li>
+        </ul>
     </section>
 
     <section>
         <h1>Service</h1>
+        <ul>
+            <li class="fragment roll-in">Runs in the background to perform long-running or remote operations</li>
+            <li class="fragment roll-in">Does not have a visual user interface</li>
+            <li class="fragment roll-in">Example: Music Player</li>
+        </ul>
     </section>
 
     <section>
-        <h1>Broadcast Receiver</h1>
+        <h2>Broadcast Receiver</h2>
+        <ul>
+            <li class="fragment roll-in">Component that listens for broadcast announcements (events)</li>
+            <li class="fragment roll-in">Events implemented as <span class="focus">Intent</span> instances</li>
+            <li class="fragment roll-in">Does not have a visual user interface</li>
+            <li class="fragment roll-in">Example: Messaging (on SMS receipt)</li>
+        </ul>
     </section>
 
     <section>
-        <h1>Content Provider</h1>
+        <h2>Content Provider</h2>
+        <ul>
+            <li class="fragment roll-in">Store & retrieve data across applications</li>
+            <li class="fragment roll-in">Uses database-style interface</li>
+            <li class="fragment roll-in">Example: Contacts</li>
+        </ul>
     </section>
 </section>
 
