r.java sample is added.

--- a/Lectures/03 - Application Fundamentals/index.html
+++ b/Lectures/03 - Application Fundamentals/index.html
@@ -397,7 +397,13 @@
     </section>
 
     <section>
-        <h1>Layouts, Views Widgets</h1>
+        <h1>Sample R.java</h1>
+        <p>The R class maps each resource ID to its location or compiled content</p>
+        <img src="img/r.png"/>
+    </section>
+
+    <section>
+        <h1>Layouts, Views, Widgets</h1>
     </section>
 
     <section>
