demo part is updated.

--- a/Lectures/04 - Managing Lifecycle and State/index.html
+++ b/Lectures/04 - Managing Lifecycle and State/index.html
@@ -136,7 +136,7 @@
             </section>
 
             <section>
-                <h1>Demo</h1>
+                <h2>Activity Lifecycle Demo</h2>
             </section>
         </section>
 
