layouts. lists and adpaters are added.

--- a/Lectures/05 - UI Development/index.html
+++ b/Lectures/05 - UI Development/index.html
@@ -67,19 +67,91 @@
             </section>
 
             <section>
-                <h1>Composition</h1>
+                <h1><span class="focus">&lt;include&gt;</span></h1>
+            </section>
 
-                <h1><span class="focus">&lt;include&gt;</span> and <span class="focus">&lt;merge&gt;</span></h1>
+            <section>
+                <h1><span class="focus">&lt;merge&gt;</span></h1>
+            </section>
+
+        </section>
+
+        <section>
+            <section>
+                <h1>List View and Adapters</h1>
+            </section>
+
+            <section>
+                <img src="img/lv1.png" />
+            </section>
+
+            <section>
+                <img src="img/lv2.png" />
+            </section>
+
+            <section>
+                <img src="img/lv3.png" />
+            </section>
+
+            <section>
+                <h2>Demo</h2>
+            </section>
+
+            <section>
+                <h2>Header & Footer</h2>
+            </section>
+
+            <section>
+                <h2>List View Tips</h2>
+                <img src="img/list_tips.png" />
             </section>
         </section>
 
         <section>
             <section>
-                <h2>List View and Adapters</h2>
+                <h1>Themes and Styles</h1>
             </section>
 
             <section>
-                <h2>Demo</h2>
+                <h2>Styles</h2>
+            </section>
+
+            <section>
+                <h2>Themes</h2>
+            </section>
+        </section>
+
+        <section>
+            <section>
+                <h1>Drawables</h1>
+            </section>
+
+            <section>
+                <h2>Shape Drawables</h2>
+            </section>
+
+            <section>
+                <h2>IMAGE HERE</h2>
+            </section>
+
+            <section>
+                <h2>Selector Drawables</h2>
+            </section>
+
+            <section>
+                <h2>IMAGE HERE</h2>
+            </section>
+
+            <section>
+                <h2>Nine-patch Drawables</h2>
+            </section>
+
+            <section>
+                <h2>Portable User Interfaces</h2>
+            </section>
+
+            <section>
+                <h2>IMAGE HERE</h2>
             </section>
         </section>
 
