themes, styling, drawables and multi screen support are added.

--- a/Lectures/05 - UI Development/index.html
+++ b/Lectures/05 - UI Development/index.html
@@ -114,10 +114,28 @@
 
             <section>
                 <h2>Styles</h2>
+                <img src="img/style.png" />
+                <img src="img/style2.png" />
             </section>
 
             <section>
                 <h2>Themes</h2>
+                <img src="img/theme.png" />
+            </section>
+
+            <section>
+                <h1>Tips</h1>
+            </section>
+
+            <section>
+                <h1>Alpha/Red/Green/Blue</h1>
+                <h2>#800000FF</h2>
+                <p>Blue with %50 opacity</p>
+            </section>
+
+            <section>
+                <h2>Texts</h2>
+                <img src="img/text.png" />
             </section>
         </section>
 
@@ -128,30 +146,27 @@
 
             <section>
                 <h2>Shape Drawables</h2>
-            </section>
-
-            <section>
-                <h2>IMAGE HERE</h2>
+                <img src="img/shape.png" />
             </section>
 
             <section>
                 <h2>Selector Drawables</h2>
+                <img src="img/selector.png" />
             </section>
 
             <section>
-                <h2>IMAGE HERE</h2>
+                <h2>Selectors</h2>
+                <img src="img/selector2.png" />
             </section>
 
             <section>
                 <h2>Nine-patch Drawables</h2>
+                <img src="img/nine_patch.png" />
             </section>
 
             <section>
                 <h2>Portable User Interfaces</h2>
-            </section>
-
-            <section>
-                <h2>IMAGE HERE</h2>
+                <img src="img/dip.png" />
             </section>
         </section>
 
